--- a/web/templates/backups.html
+++ b/web/templates/backups.html
@@ -10,7 +10,7 @@
     <div class="page-header">
         <div>
             <h2><i data-lucide="hard-drive-download" style="color: #1F8F74; width: 28px; height: 28px; vertical-align: -4px; margin-right: 0.5rem;"></i>Backup & Restore</h2>
-            <p style="color: #718096; margin-top: 0.5rem;">Protect your data with regular backups</p>
+            <p class="page-subtitle">Protect your data with regular backups</p>
         </div>
     </div>
     
