--- a/web/templates/change_password.html
+++ b/web/templates/change_password.html
@@ -24,7 +24,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        color: #718096;
+        color: var(--color-text-muted);
     }
     
     .toggle-password:hover {
