--- a/web/templates/entry_forms/communication.html
+++ b/web/templates/entry_forms/communication.html
@@ -18,7 +18,7 @@
     <div style="display: flex; justify-content: space-between; align-items: start; margin-bottom: 2rem;">
         <div>
             <h2><i data-lucide="message-circle" style="color: #1F8F74; width: 28px; height: 28px; vertical-align: -4px; margin-right: 0.5rem;"></i>Communication Entry</h2>
-            <div style="color: #718096;">
+            <div class="text-muted">
                 <div style="margin-bottom: 0.25rem;">
                     <span class="type-badge" style="background-color: {{ client_type['color'] }}">
                         {{ client_type['name'] }}
