--- a/web/templates/session_report.html
+++ b/web/templates/session_report.html
@@ -12,7 +12,7 @@
     <div class="export-header">
         <div>
             <h2><i data-lucide="file-bar-chart" style="color: #1F8F74; width: 28px; height: 28px; vertical-align: -4px; margin-right: 0.5rem;"></i>Session Report</h2>
-            <div style="color: #718096; margin-top: 0.5rem;">
+            <div class="text-muted mt-1">
                 <span class="type-badge" style="background-color: {{ client_type.color }}">{{ client_type.name }}</span>
                 {{ client.first_name }} {{ client.middle_name or '' }} {{ client.last_name }} · File #{{ client.file_number }}
             </div>
